Stopped the basic cube game from getting the user stuck in an infinite reload loop, optimized the nav bar to better fit phones (hopefully) using VH measurements instead of px and rm.

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -26,15 +26,15 @@
 }
 
 :root {
-    --bar-width: 50px;
-    --bar-height: 10px;
-    --hamburger-gap: 5px;
+    --bar-width: 8vh;
+    --bar-height: 1.5vh;
+    --hamburger-gap: 1vh;
     --foreground: #333;
     --background: white;
-    --hamburger-margin: 8px;
+    --hamburger-margin: 2vh;
     --animation-time: 200ms ease-in-out;
-    --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
-    --button-width: 19rem;
+    --hamburger-height: calc((var(--bar-height) * 3) + (var(--hamburger-gap) * 2));
+    --button-width: 38vh;
     --x-width: calc(var(--hamburger-height) * 1.41421356237);
 }
 
@@ -86,10 +86,10 @@
     transition: translate var(--animation-time), opacity var(--animation-time);
     translate: -100%;
     opacity: 0;
-    padding: calc(var(--hamburger-height) + var(--hamburger-margin) + 1rem) 0.5rem 1rem 0.5rem;
+    padding: calc(var(--hamburger-height) + var(--hamburger-margin) + 1vh) 1vh 1vh 1vh;
     position: fixed !important;
     color: var(--background);
-    width: 20rem;
+    width: 40vh;
     min-height: 100vh;
     text-align: left;
     top: 0 !important;
@@ -122,21 +122,21 @@ nav input[name=menu] {
     margin: 4px 0;
     border: none;
     cursor: pointer;
-    padding: 2px 10px;
+    padding: .5vh 1vh;
     width: var(--button-width);
     display: inline-block;
 }
 
 .hamburger-btn.one {
     background-color: gray;
-    font-size: 40px;
+    font-size: 6vh;
     width: var(--button-width);
     text-align: left;
 }
 
 .hamburger-btn.two {
     background-color: darkgray;
-    font-size: 35px;
+    font-size: 4vh;
     width: var(--button-width);
     text-align: center;
 }
